<resources>
    <string name="app_name">ToDoList</string>
    <string name="remember_me">RememberMe</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="login_or_register">Login / Register</string>
    <string name="e_mail">E-mail</string>
    <string name="move_to_list">Move to list</string>
    <string name="Title">Title:</string>
    <string name="Description">Description:</string>
    <string name="Done">Done:</string>
    <string name="Cancel">Cancel</string>
    <string name="start_writing_your_tododa">Start Writing your ToDoDa !</string>
    <string name="add_button">add button</string>
    <string name="to_do_list">TodoDa</string>
    <string name="title_activity_second2">SecondActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
