<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="20dp"
    android:layout_centerInParent="true"
    android:id="@+id/add_dialog_fragment"
    tools:context=".AddBtnDialogFragment">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/Title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_txt"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/title_txt" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_txt"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/Description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/description_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/description_txt"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title_edit_txt"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/description_txt" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/cancel_btn"
        android:layout_below="@+id/description_edit_txt"
        android:text="@string/Done" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/description_edit_txt"
        android:text="@string/Cancel" />


</RelativeLayout>